<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class () extends Migration {
    /**
     * Run the migrations.
     *
     * @return void
     */
    public function up()
    {
        Schema::create('event_team', function (Blueprint $table) {
            $table->id();

            $table->enum('payment_status', [
                'paid',
                'unpaid'
            ])->nullable();

            $table->string('checkout_session')->nullable();

            $table->foreignId('stage_id')->nullable()->constrained();

            $table->foreignId('event_id')->constrained();
            $table->foreignId('team_id')->constrained();

            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     *
     * @return void
     */
    public function down()
    {
        Schema::dropIfExists('event_team');
    }
};
