@startuml E-R diagram
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity users {
    * id
    --
    * name
    * email
    * password
}

entity colleges {
    * id
    --
    * name
}

entity profiles {
    * id
    --
    gender
    nationality
    address
    city
    state
    pin_code
    contact_number
    degree
    year_of_study
    --
    * user_id
    * college_id
}

entity sponsors {
    * id
    --
    * name
    * slug
    * tagline
    * url
    * type
    --
    * edition_id
}

entity editions {
    * id
    --
    * year
    * start_time
    * end_time
}

entity categories {
    * id
    --
    * name
    * slug
    * description
    --
    * edition_id
}

entity clusters {
    * id
    --
    * name
    * description
    * slug
    --
    * category_id
}

entity events {
    * id
    --
    * name
    * slug
    * description
    rules
    prizes
    resources
    max_participants
    registration_fee
    contact
}

entity event_sponsor {
    * id
    --
    * event_id
    * sponsor_id
}

entity announcements {
    * id
    --
    * title
    * content
    --
    * event_id
}

entity faqs {
    * id
    --
    * question
    * answer
    --
    * event_id
}

entity stages {
    * id
    --
    * name
    * description
    * start_time
    * end_time
    location_in_venue
    --
    * event_id
    * venue_id
}

entity venues {
    * id
    --
    * name
    * description
    * location
    capacity
}

entity teams {
    * id
    --
    * name
}

entity team_user {
    * id
    --
    * team_id
    * user_id
}

entity event_team {
    * id
    --
    stage_id
    payment_status
    checkout_session
    --
    * event_id
    * team_id
}

entity news {
    * id
    --
    * title
    * content
    --
    * edition_id
}

editions        ||--o{      sponsors
editions        ||--o{      categories
events          ||--o{      faqs
events          ||--o{      stages
events          }o--||      clusters
clusters        }o--||      categories
events          ||--o{      event_sponsor
sponsors        ||--o{      event_sponsor
events          ||--o{      event_team
teams           ||--o{      event_team
events          ||--o{      announcements
editions        ||--o{      news
stages          }o--||      venues
teams           ||--o{      team_user
users           ||--o{      team_user
users           ||--||      profiles
profiles        }o--||      colleges

@enduml
